<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".BoxOfficeDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivPosterImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:maxHeight="300dp"
                android:scaleType="fitXY"
                android:src="@drawable/not_found" />


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ivPosterImage"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/ivPosterImage"
                android:text="@string/the_dark_knight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAverageVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvTitle"
                android:layout_below="@+id/tvTitle"
                android:layout_marginTop="5dp"
                android:text="@string/average_vote"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPopularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvAverageVote"
                android:layout_below="@+id/tvAverageVote"
                android:layout_marginTop="5dp"
                android:text="@string/popularity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvAverageVote"
                android:layout_below="@+id/tvPopularity"
                android:layout_marginTop="5dp"
                android:text="@string/genres"
                android:visibility="gone"
                android:textSize="14sp"/>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivPosterImage"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/synopsisTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/synopsis"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvSynopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint" />

                    <TextView
                        android:id="@+id/castTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/cast"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                    <TextView
                        android:id="@+id/tvCast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>